<resources>
    <string name="app_name">Dequ</string>
    <string name="facebook_app_id">1331451413575933</string>
    <string name="fb_login_protocol_scheme">fb1331451413575933</string>
    <string name="login_cancel">Login has been cancelled.</string>
    <string name="login_error">There has been an error while logging in.</string>
    <string name="logout">Logout</string>
    <string name="token_factory_url">http://192.168.15.6:3000/api/tokenfactory</string>
    <string name="profile_picture_content_description">User\'s profile picture</string>
    <string name="user_name">User Name</string>
    <string name="user_level">User Level</string>
    <string name="user_xp">User Experience</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="change_language_button">Change Language</string>
    <string name="logout_button">Logout</string>
    <string name="create_report">Report</string>
    <string name="create_event">Event</string>
    <string name="place_report">Place Report</string>
    <string name="hint_description">Description</string>
    <string name="report_dialog_title">Report Information</string>
    <string name="report_type_text_view">Type</string>
    <string name="report_level_text_view">Level</string>
    <string name="take_photo_button">Add photo </string>
    <string name="report_title_text"> Title:</string>
    <string name="report_title_hint">Report</string>
    <string name="cancel_button">Cancel</string>
    <string name="server_url">10.12.211.246:3000</string>
    <string name="btn_cancel_event">Cancel</string>
    <string name="btn_create_event">Create Event</string>
    <string name="info_report_description">Description</string>
    <string name="info_report_level">Level</string>
    <string name="info_report_type">Type</string>
    <string name="info_report_title">Title</string>
    <string name="report_event_name">Event Title</string>
    <string name="edreport_event_title_event">Event</string>
    <string name="report_event_date_start">Date</string>
    <string name="report_event_hour_start">Time</string>
    <string name="event_dialog_title">Event Information</string>
    <string name="btn_join_event">Join Event</string>
    <string name="info_event_people">People Joined</string>
    <string name="info_report_people">People</string>
    <string name="btn_join">Join</string>
    <string name="my_event">My Events</string>
    <string name="other_event">Other Events</string>
    <string name="join_event_description">Do you want to join the event on Facebook too?</string>
    <string name="stay_in_app">Stay in App</string>
    <string name="join_fb_event">Go to Fb</string>
    <string-array name="report_type">
        <item>Garbage</item>
        <item>Nature</item>
        <item>Landmarks and Places</item>
        <item>Other</item>
    </string-array>
    <string-array name="report_level">
        <item>Calm</item>
        <item>Medium</item>
        <item>Important</item>
        <item>Urgent</item>
    </string-array>
</resources>
