<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alertColor"
    android:theme="@style/AlertDialog.AppCompat">

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="Report Information"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:background="@color/emeraldcolor"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="1">

        <TextView
            android:id="@+id/txtViewReportTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/report_title_text"
            android:textSize="18dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/edTxtReportTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/report_title_hint"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="1">

        <TextView
            android:id="@+id/txtViewReportType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/report_type_text_view"
            android:textSize="18dp"
            android:textColor="@android:color/white"/>

        <Spinner
            android:id="@+id/spinnerReportType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:entries="@array/report_type"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="1">

        <TextView
            android:id="@+id/txtViewReportLevel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/report_level_text_view"
            android:textSize="18dp"
            android:textColor="@android:color/white"/>

        <Spinner
            android:id="@+id/spinnerReportLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:entries="@array/report_level"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edTxtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="70dp"
                  android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"/>
        <Button
            android:id="@+id/btnCancelReport"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".4"
            android:text="@string/cancel_button"
            android:drawableTop="@drawable/ic_cancel_black_24px"
            android:backgroundTint="@color/cancelColor"/>

        <Button
            android:id="@+id/btnChooseImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".4"
            android:text="@string/take_photo_button"
            android:drawableTop="@drawable/ic_camera_alt_black_24px"
            android:backgroundTint="@color/cancelColor"/>/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"/>
    </LinearLayout>


</LinearLayout>