<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fb="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="NestedWeights"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sunfire.dequ.MainActivity"
    android:id="@+id/viewMainActivity"
    android:weightSum="1">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:orientation="vertical"
                  tools:context="sunfire.dequ.MainActivity"
                  android:layout_weight=".13"
                  android:weightSum="1">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:app="http://schemas.android.com/apk/res-auto"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:orientation="horizontal"
                      tools:context="sunfire.dequ.MainActivity"
                      android:layout_weight="1"
                      android:weightSum="1">

            <com.facebook.login.widget.ProfilePictureView
                android:id="@+id/profilePicture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center_horizontal"
                fb:com_facebook_preset_size="normal"
                android:layout_gravity="center_horizontal" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:app="http://schemas.android.com/apk/res-auto"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          tools:context="sunfire.dequ.MainActivity"
                          android:layout_weight=".65"
                          android:weightSum="1">

                <TextView
                    android:id="@+id/txtViewUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:paddingTop="8dp"/>

                <TextView
                    android:id="@+id/txtViewUserLevelAndExp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_level"/>

                <ProgressBar
                    android:id="@+id/progressBarExp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/imgBtnSettings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_settings_black_24dp"
                android:layout_weight=".15"
                android:contentDescription="@string/profile_picture_content_description"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight=".77">

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/map"
                      android:name="com.google.android.gms.maps.MapFragment"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                android:id="@+id/imgViewDummy"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/pin"
                android:id="@+id/imgViewPin"
                android:layout_above="@id/imgViewDummy"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/btnPlaceReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/place_report"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:orientation="horizontal"
                  tools:context="sunfire.dequ.MainActivity"
                  android:layout_weight=".10"
                  android:weightSum="1">

        <Button
            android:id="@+id/btnReport"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/create_report"/>

        <Button
            android:id="@+id/btnCreateEvent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/create_event"/>

        <Button
            android:id="@+id/btnMyProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/profile"/>

        <Button
            android:id="@+id/btnOnOffMarkers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>

    </LinearLayout>


</LinearLayout>
